# read_qr

./: CMakeLists.txt  OIT_assumed_code.py  README.md  generate2read_qr.py  package.xml  qr.py  read_qr_camera.py
launch/: read_qr.launch
src/: generate2read_qr.py  read_qr_camera.py
